[metadata]
name = brushfire-api
version = 0.1.0
description = Typed Python client for the Brushfire API
author = TJ Renninger
author_email = renningert@dm.org
license = MIT
python_requires = >=3.6

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
