[metadata]
name = brushfire-api
version = 0.1.2
description = Typed Python client for the Brushfire API
author = TJ Renninger
author_email = renningert@dm.org
license = MIT
python_requires = >=3.6
long_description = file: PYPI_README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
